--- a/Readme
+++ b/Readme
@@ -2,40 +2,36 @@
 
 ## 💡 Resumen Ejecutivo
 
-Este proyecto demuestra un flujo de trabajo completo de Data Analysis aplicando el modelo **RFM** (Recencia, Frecuencia, Valor Monetario) para segmentar la base de clientes de un minorista en línea.
+Este proyecto aplica una metodología de análisis de datos para segmentar la base de clientes de un minorista en línea. El objetivo es transformar datos transaccionales brutos en **inteligencia de negocio accionable** utilizando el modelo **RFM** (Recencia, Frecuencia, Valor Monetario), identificando los segmentos más valiosos y aquellos en riesgo de abandono.
 
-El objetivo es transformar datos transaccionales brutos en **inteligencia de negocio accionable**, identificando los segmentos de clientes más valiosos (Campeones) y aquellos en riesgo de abandono (Clientes en Riesgo). El resultado es un dataset final listo para la visualización y la toma de decisiones estratégicas.
+El flujo de trabajo demuestra habilidades en la **integración de Python (Pandas)** y **SQL (SQLite)** para la limpieza de datos y el *Feature Engineering*.
 
 ***
 
-## ⚙️ Metodología Técnica
-
-El análisis se desarrolló íntegramente en un entorno de **Google Colab**, demostrando la integración fluida de **Python** (Pandas) y **SQL** (SQLite).
+## ⚙️ Metodología Técnica (QA/QC)
 
 ### 1. Limpieza de Datos y Preprocesamiento (Python/Pandas)
-* **Archivos Eliminados:** Filas con `Quantity` $\le 0$ (devoluciones), `UnitPrice` $\le 0$ y registros sin `CustomerID` (esenciales para RFM).
-* **Feature Engineering:** Creación de la métrica clave de ingresos **`Sales_Total`** (`Quantity * UnitPrice`).
+* **Limpieza de Datos:** Manejo de nulos, y filtrado de errores transaccionales (Quantity $\le 0$, UnitPrice $\le 0$).
+* **Feature Engineering Inicial:** Creación de la métrica de ingresos **`Sales_Total`** (`Quantity * UnitPrice`).
 
-### 2. Feature Engineering (SQL/SQLite)
-* Se utilizó una base de datos SQLite en memoria para realizar las agregaciones de alto rendimiento.
-* **Métricas Calculadas:**
-    * **Recencia (R):** Calculada en Python (días desde la última compra).
-    * **Frecuencia (F):** Conteo de facturas únicas (`COUNT(DISTINCT InvoiceNo)`).
-    * **Monetario (M):** Suma del gasto total (`SUM(Sales_Total)`).
+### 2. Cálculo de Métricas RFM (Python + SQL/SQLite)
+* **Integración de Herramientas:** Se usó Python para calcular la **Recencia (R)** (gestión de fechas) y SQL (SQLite) para calcular la **Frecuencia (F)** y el **Valor Monetario (M)** a través de consultas de agregación.
 
 ### 3. Segmentación y Scoring (Python/Pandas)
-* **Scoring:** Asignación de puntuaciones de 1 a 4 a R, F y M mediante el método de **Cuartiles**, resolviendo problemas de *bins* con un método robusto (`pd.cut` con límites explícitos).
-* **Output Final:** Generación de la columna **`Segment`** (ej. 'Campeones', 'Clientes en Riesgo') basada en reglas de negocio (ej. RFM Score 444).
+* **Scoring:** Asignación de puntuaciones de 1 a 4 a R, F y M mediante **Cuartiles** (`pd.cut` con límites robustos).
+* **Categorización:** Generación de la columna final **`Segment`** (ej. 'Campeones', 'Clientes en Riesgo') basada en reglas de negocio estándar.
 
 ***
 
 ## 🎯 Hallazgos Clave y Estrategia de Negocio
 
+La segmentación RFM es crucial para optimizar el retorno de la inversión (ROI) en marketing. La siguiente tabla resume la estrategia de negocio para los segmentos críticos.
+
 | Segmento | Descripción Clave | Proporción de Clientes | Ingresos Aportados | Acción Estratégica Recomendada |
 | :--- | :--- | :--- | :--- | :--- |
-| **Campeones** | Los más recientes, frecuentes y que más gastan. (R:4, F:4, M:4) | [X]% | [Y]% | **Recompensa:** Programa de Lealtad VIP, lanzamientos exclusivos. |
-| **Clientes en Riesgo** | Gastaron mucho y compran seguido, pero no han vuelto en mucho tiempo. (R:1-2, F:3-5, M:3-5) | [X]% | [Y]% | **Reactivación Inmediata:** Campañas de ofertas personalizadas para prevenir el abandono. |
-| **Potencial Leal** | Reciente actividad, pero baja frecuencia/gasto. (R:3-4, F:1-3, M:1-3) | [X]% | [Y]% | **Crecimiento:** Incentivar la próxima compra con micro-descuentos. |
+| **Campeones** | Los más recientes, frecuentes y que más gastan. (R:4, F:4, M:4) | [X]% | [Y]% | **Retención:** Programa de Lealtad VIP y ofertas exclusivas para maximizar CLV. |
+| **Clientes en Riesgo** | Alto valor histórico, pero baja Recencia. (R:1-2, F:3-5, M:3-5) | [X]% | [Y]% | **Reactivación:** Campaña de *Win-back* con ofertas de alto valor y encuestas de satisfacción. |
+| **Potencial Leal** | Reciente actividad, pero baja frecuencia/gasto. (R:3-4, F:1-3, M:1-3) | [X]% | [Y]% | **Crecimiento:** Incentivar la próxima compra con descuentos por volumen. |
 
 *(**Nota:** Reemplace los valores [X]% y [Y]% con los resultados de su análisis.)*
 
@@ -45,19 +41,18 @@ El análisis se desarrolló íntegramente en un entorno de **Google Colab**, dem
 
 | Archivo | Descripción |
 | :--- | :--- |
-| `Online_Retail_RFM_Analysis.ipynb` | **Notebook principal de Google Colab** con el código unificado de todo el flujo (Limpieza, RFM, Segmentación). |
-| `online_retail.csv` | Dataset de entrada original. |
-| `rfm_segmentation_final.csv` | **Dataset Final** listo para la visualización. Contiene el `CustomerID`, las puntuaciones RFM y la columna categórica **`Segment`**. |
+| `Online_Retail_RFM_Analysis.ipynb` | **Notebook principal de Google Colab** con todo el código del proyecto. |
+| `rfm_segmentation_final.csv` | **Dataset Final** listo para BI. Contiene el `CustomerID`, las puntuaciones RFM y la columna categórica **`Segment`**. |
 
 ***
 
 ## 🛠️ Herramientas Utilizadas
 
 * **Python:** Pandas, NumPy.
-* **SQL:** SQLite (Integración con Pandas).
-* **Visualización:** Looker Studio (Dashboard Ejecutivo).
+* **SQL:** SQLite (Integración).
+* **Visualización:** Looker Studio / Power BI.
 
-### 🔗 **[]**
+### 🔗 **[COLOCAR AQUÍ EL LINK A TU DASHBOARD EN LOOKER STUDIO / POWER BI]**
 
 ---
 *Desarrollado por: [Tu Nombre]*
